added contact page and mail system, plz do not send me spam

--- a/style.css
+++ b/style.css
@@ -652,4 +652,78 @@ body {
         justify-content: center;
         height: auto;
     }
-  }
+}
+
+#contact {
+    box-shadow: 0px 0px 3px 4px #71bdd5;
+    width: 100%;
+    background-color: #3D2485;
+    border-radius: 15px;    
+    height: fit-content;
+    padding-bottom: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#contact h1 {
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    margin: auto;
+    padding: 1em;
+}
+
+.col {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: auto;
+}
+
+.col label {
+    color: white;
+    font-weight: bold;
+    font-size: 1.4em;
+}
+
+.col input, textarea  {
+    width: 98%;
+    height: 2em;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 2%;
+    padding: 8px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.col textarea {
+    height: 10em;
+}
+
+.col input:focus, textarea:focus{
+    box-shadow: #71bdd5 0px 0px 0px 3px;
+    transition: box-shadow 0.3s linear;
+}
+
+.col button{
+    width: 25%;
+    background-color: tomato;
+    border: 3px solid black;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    font-size: 1.25em;
+    align-self: flex-end;
+}
+
+.col button:hover{
+    background-color: green;
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
