--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ body {
 
 .footer li {
     margin-top: 8px;
-    margin-bottom: 12px;
+    margin-bottom: 16px;
 }
 
 .footer h1 {
@@ -308,7 +308,7 @@ body {
 }
 
 .footer a {
-    padding: 2px;
+    padding: 4px;
     border: 2px solid black;
     border-radius: 4px;
     margin-bottom: 1em;
@@ -316,6 +316,13 @@ body {
     margin-left: 3.6em;
     color: white;
     text-decoration: none
+}
+
+.footer a:hover {
+    background-color: #69c9e6;
+    font-weight: bold;
+    transition: all 0.5s;
+    color: black;
 }
 
 #janela {
@@ -577,6 +584,17 @@ body {
     justify-self: center;
 }
 
+
+#adp:hover {
+    font-size: 7em;
+    width: 55%;
+    background-color: rgb(0, 187, 0);
+    color: white;
+    cursor: pointer;
+    border: 5px solid green;
+    transition: all 0.5s;
+}
+
 #addprod {
     width: 80%;
     height: 60%;
@@ -584,8 +602,9 @@ body {
     visibility: hidden;
     display: flex;
     position: fixed;
-    background-color: #DDDDDD;
+    background-color: #3D2485;
     box-shadow: 0px 0px 3px 4px #71bdd5;
+    color: white;
     padding: 1em;
     top: 20%;
     left: 10%;
@@ -804,6 +823,7 @@ body {
     width: 80%;
     height: 250px;
     margin: 6px;
+    border: 1px solid black;
 }
 
 .produto p {
